syntax = "proto3";
package directory_pb;
option go_package = "./directory_pb";

message Inode{
  string full_path = 1;
  string set = 2;
  int64 time = 3;
  uint32 mode = 4;
}